# mycelium

./: .cursorrules  .env.example  .gitignore  AGENTS.md  CODEOWNERS  LICENSE  PROJECT_BRIEF.md  README.md  RESTART_PROMPT.md  TODO.md  langgraph.json  pyproject.toml
.cursor/: hooks.json  permissions.json
admin-ui/: index.html  package-lock.json  package.json  vite.config.ts
data/: README.md  agent_registry.json  categories.json  prepare_seed.py  raw_data.json  seed.json  seed_crm.json
docs/: README.md  architecture.md  database-notes.md  full-code-walkthrough.md  legacy-ingest-and-storage-reference.md  onboarding.md  phase-1-direction.md  query-grain-router.md  query-record-type-router.md  seed-bootstrap.md  vision.md
prompts/: WORKFLOW.md
src/: main.py
tests/: baseball_derive_fixtures.py  baseball_minimal_fixture.py  conftest.py  network_helpers.py  registry_helpers.py  test_admin_daemon.py  test_agent_factory.py  test_attribute_write.py  test_baseball_batting_specialist.py  test_baseball_bio_specialist.py  test_baseball_bootstrap_experiment.py  test_baseball_career_avg_derive.py  test_baseball_fielding_derive.py  test_baseball_fielding_specialist.py  test_baseball_franchise_specialist.py  test_baseball_intent_dedup.py  test_baseball_multi_attr_deliver.py  test_baseball_multi_domain_deliver.py  test_baseball_ops_derive.py  test_baseball_pack_ontology.py  test_baseball_pitching_derive.py  test_baseball_pitching_specialist.py  test_baseball_player_identity_specialist.py  test_baseball_roster_specialist.py  test_baseball_team_season_specialist.py  test_bootstrap_progress.py  test_categories_sample.py  test_cli_metering_query.py  test_closed_identity_lazy_aliases.py  test_core_data_agent.py  test_core_graph.py  test_crm_empty_create_on_deliver.py  test_delivery_network_hints.py  test_delivery_store.py  test_derive_review.py  test_derive_sandbox.py  test_entity_boundary.py  (+70 more)
(+1164 files in other folders)
